Remove no longer needed surefire configuration