@@ -86,15 +86,6 @@
           <excludePackageNames>*.internal,*.internal.*</excludePackageNames>
         </configuration>
       </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>@{argLine} ${jetty.surefire.argLine}
-            --add-modules org.eclipse.jetty.jmx
-            --add-reads org.eclipse.jetty.deploy=org.eclipse.jetty.http
-            --add-reads org.eclipse.jetty.deploy=org.eclipse.jetty.logging</argLine>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
 </project>
